...
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <ImageButton
                android:id="@+id/selection_close_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ripple_background"
                android:backgroundTint="?android:attr/colorBackground"
                android:contentDescription="@string/exit_selection"
...
                android:text="@{selectedCount}"
                android:textColor="?attr/colorOnSurface"
                android:textSize="20sp"
                tools:text="2 selected" />

            <ImageButton
                android:id="@+id/selection_menu_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ripple_background"
                android:backgroundTint="?android:attr/colorBackground"
                android:contentDescription="@string/more"
...
